--- a/public/about.html
+++ b/public/about.html
@@ -22,18 +22,20 @@
               <li class="nav-item navmain">
                 <a class="nav-link " aria-current="page" href="/">Home</a>
               </li>
-              <li class="nav-item navmain">
-                <a class="nav-link " href="/Registration">Post a job</a>
-              </li>
+              
               <li class="nav-item navmain">
                 <a class="nav-link active" href="#">About</a>
               </li>
               <li class="nav-item navmain">
                 <a class="nav-link" href="#">Blog</a>
               </li>
+              </ul>
               <button type="button" class="btn btn-outline-primary navbtn" style="color: white;">Contact Us</button>
-           
+              <form method="Post" action="/signout">
+                <input type="submit" value="Logout" class="btn btn-lg btn-outline-danger" style="color: white; margin-left: 10px;" >
+               </form>
           </div>
+
         </div>
       </nav>
 <div class="container-fluid background pt-5 banner ">
